--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "author": "cv.michaelkohler.info",
   "description": "Michael Kohler's CV",
+  "private": true,
   "dependencies" : {
     "gulp"                   :  "3.8.8",
-    "gulp-jslint"         :  "0.1.7",
-    "gulp-webserver":   "0.8.0",
-    "normalize.css"    :  "3.0.1"
+    "gulp-jslint"            :  "0.1.7",
+    "gulp-webserver"         :   "0.8.0",
+    "normalize.css"          :  "3.0.1"
   }
 }
