--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies" : {
     "gulp"                   :  "3.8.8",
     "gulp-jslint"            :  "0.1.7",
-    "gulp-webserver"         :   "0.8.0",
-    "normalize.css"          :  "3.0.1"
+    "gulp-webserver"         :   "0.8.0"
   }
 }
